[package]
name = "yew-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "78bb994" }
yew-agent = { git = "https://github.com/yewstack/yew.git", rev = "78bb994" }
yew-router = { git = "https://github.com/yewstack/yew.git", rev = "78bb994" }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]}
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.54", features = [
    "console",
    "Event",
    "HtmlInputElement",
    "InputEvent",
    "FocusEvent",
    "EventTarget",
    "MouseEvent",
] }
js-sys = "0.3.55"
serde = "1.0.130"
